--- a/golang-gin-rest/skaffold.yaml
+++ b/golang-gin-rest/skaffold.yaml
@@ -2,12 +2,8 @@ apiVersion: skaffold/v2beta16
 kind: Config
 build:
   artifacts:
-  - image: skaffold-example
-  cluster:
-    pullSecretName: e2esecret-with-path
-    pullSecretPath:     kaniko-secret.json
-    namespace: default
+  - image: golang-gin-rest
 deploy:
   kubectl:
     manifests:
-      - k8s-*
+      - k8s/*
