--- a/python-flask/skaffold.yaml
+++ b/python-flask/skaffold.yaml
@@ -3,7 +3,25 @@ kind: Config
 build:
   artifacts:
   - image: python-flask
+
 deploy:
   kubectl:
     manifests:
       - k8s/*
+
+profiles:
+  - name: dev
+    activation:
+      - command: dev
+    build:
+      artifacts:
+      - image: python-flask
+        docker:
+          buildArgs:
+            DEBUG: 1
+        sync:
+          manual:
+          # Sync all the python files that are in the src folder
+          # with the container src folder
+          - src: 'src/**/*.py'
+            dest: .
