--- a/python-hello-world/Dockerfile
+++ b/python-hello-world/Dockerfile
@@ -1,5 +1,13 @@
 FROM python:3-alpine
+
+RUN adduser -D python
+USER python
+WORKDIR /home/python
+
 WORKDIR /app
-COPY app.py /app/
+COPY --chown=python:python . .
+RUN python -m nose2
+ARG DEBUG=0
 EXPOSE 5000
-CMD [ "python3", "-u", "app.py"]
+CMD [ "python3", "-u" , "src/app.py"]
+
