--- a/python-hello-world/Dockerfile
+++ b/python-hello-world/Dockerfile
@@ -6,8 +6,5 @@ WORKDIR /home/python
 
 WORKDIR /app
 COPY --chown=python:python . .
-RUN python -m nose2
-ARG DEBUG=0
 EXPOSE 5000
-CMD [ "python3", "-u" , "src/app.py"]
-
+CMD [ "python3", "-u" , "app.py"]
