--- a/react-hello-world/Dockerfile.dev
+++ b/react-hello-world/Dockerfile.dev
@@ -5,5 +5,6 @@ COPY package.json yarn.lock ./
 RUN yarn install --network-timeout 1000000
 COPY . .
 
-EXPOSE 3000
+EXPOSE 80
+ENV PORT 80
 CMD ["yarn", "start"]
