--- a/react-hello-world/k8s/service.yaml
+++ b/react-hello-world/k8s/service.yaml
@@ -7,7 +7,8 @@ metadata:
 spec:
   clusterIP: None
   ports:
-    - port: 80
+    - port: 3000
+      targetPort: 80
       name: react-hello-world
   selector:
     app: react-hello-world
